<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.code_embryo.app.android.beaconfinder.MainActivity"
    tools:showIn="@layout/activity_main">

    <LinearLayout
        android:id="@+id/switchLayout"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:paddingBottom="4dp">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:id="@+id/deviceIcon"
        android:src="@mipmap/ic_devices_black"
        android:contentDescription="Device Icon Image"/>

    <Switch
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:text="@string/sw_scan"
        android:id="@+id/switchScan"
        android:textSize="16sp"
        android:splitTrack="false"
        android:singleLine="false"
        android:showText="false"
        android:paddingStart="32dp"
        android:textStyle="normal"/>

    </LinearLayout>

    <ListView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/listView"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/switchLayout"/>

</RelativeLayout>
